--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -34,6 +34,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 2 - Component Selector
             </NavLink>
         </div>
+        <hr />
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="exo1">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Quizz
+            </NavLink>
+        </div>
     </nav>
 </div>
 
