--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -34,6 +34,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 2 - Component Selector
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demo3">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 3 - Virtualize
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demo4">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 4 - Lifecycle
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demo5">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 5 - Formulaire
+            </NavLink>
+        </div>
         <hr />
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="exo1">
