--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -55,6 +55,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Quizz
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="exo2">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Gestion Article
+            </NavLink>
+        </div>
     </nav>
 </div>
 
