--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -60,6 +60,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Gestion Article
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="exo3">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Chat
+            </NavLink>
+        </div>
     </nav>
 </div>
 
