--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -49,6 +49,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 5 - Formulaire
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demo6">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 6 - Login to api
+            </NavLink>
+        </div>
         <hr />
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="exo1">
