--- a/DemoProject/Pages/FetchData.razor
+++ b/DemoProject/Pages/FetchData.razor
@@ -1,40 +1,55 @@
 ﻿@page "/fetchdata"
 @inject HttpClient Http
+@inject NavigationManager navManager
+@using System.Security.Claims
 
-<PageTitle>Weather forecast</PageTitle>
+<AuthorizeView Roles="admin">
+    <Authorized>
+        <PageTitle>Weather forecast</PageTitle>
 
-<h1>Weather forecast</h1>
+        <h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+        <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+        @if (forecasts == null)
+        {
+            <p><em>Loading...</em></p>
+        }
+        else
+        {
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Temp. (C)</th>
+                        <th>Temp. (F)</th>
+                        <th>Summary</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var forecast in forecasts)
+                    {
+                        <tr>
+                            <td>@forecast.Date.ToShortDateString()</td>
+                            <td>@forecast.TemperatureC</td>
+                            <td>@forecast.TemperatureF</td>
+                            <td>@forecast.Summary</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </Authorized>
+    <NotAuthorized>
+        @if(true){
+            navManager.NavigateTo("/demo6");
+        }
+            
+        
+    </NotAuthorized>
+</AuthorizeView>
+
+
 
 @code {
     private WeatherForecast[]? forecasts;
