--- a/DemoProject/Shared/NavMenu.razor
+++ b/DemoProject/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using DemoProject.Tools
+@using System.Security.Claims
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">DemoProject</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -19,11 +21,14 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+        
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="fetchdata">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                </NavLink>
+            </div>
+        
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="demo1">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Demo 1 - Bindings
@@ -82,4 +87,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+    
 }
