--- a/DemoProject/Pages/Exercices/Exo2/ArticleList.razor
+++ b/DemoProject/Pages/Exercices/Exo2/ArticleList.razor
@@ -1,32 +1,65 @@
 ﻿@page "/exo2"
+@using System.Security.Claims
 <h3>ArticleList</h3>
+<AuthorizeView>
+    <Authorized>
+        <div class="content">
+            <div class="left">
+                <div class="list-group">
+                    @if (Articles is not null)
+                    {
+                        <Virtualize Items="Articles" Context="a">
+                            <div class="list-group-item">
+                                <label>@a.Label : @a.Price €</label>
+                                @if(context.User.Identity != null) {
+                                    <button class="btn btn-outline-primary"
+                                    @onclick="() => SelectId(a.Id)">
+                                        Detail
+                                    </button>
+                                }
+                                
+                            </div>
+                        </Virtualize>
+                    }
 
-<div class="content">
-    <div class="left">
+                </div>
+            </div>
+            <div class="right">
+                @if(context.User.FindFirst(ClaimTypes.Role).Value == "admin") {
+                    <div class="add">
+                        <ArticleAdd NotifyRegister="GetItems" />
+                    </div>
+                }
+                
+                @if (SelectedId != 0)
+                {
+                    <div class="detail">
+                        <ArticleDetail currentId="SelectedId" />
+                    </div>
+                }
+
+            </div>
+        </div>s
+    </Authorized>
+    <NotAuthorized>
         <div class="list-group">
-            @if(Articles is not null){
+            @if (Articles is not null)
+            {
                 <Virtualize Items="Articles" Context="a">
                     <div class="list-group-item">
                         <label>@a.Label : @a.Price €</label>
-                        <button class="btn btn-outline-primary"
+                        @if (context.User.Claims.Count() > 0)
+                        {
+                            <button class="btn btn-outline-primary"
                             @onclick="() => SelectId(a.Id)">
-                            Detail
-                        </button>
+                                Detail
+                            </button>
+                        }
+
                     </div>
                 </Virtualize>
             }
-            
+
         </div>
-    </div>
-    <div class="right">
-        <div class="add">
-            <ArticleAdd NotifyRegister="GetItems"/>
-        </div>
-        @if(SelectedId != 0){
-            <div class="detail">
-                <ArticleDetail currentId="SelectedId" />
-            </div>
-        }
-        
-    </div>
-</div>
+    </NotAuthorized>
+</AuthorizeView>
